--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <!-- jQuery UI CSS -->
+    <link
+      rel="stylesheet"
+      href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"
+    />
   </head>
   <body>
     <!-- Header / Navbar -->
@@ -53,19 +58,26 @@
           class="rounded-circle mb-3"
           width="200"
         />
-        <p class="lead">
-          I'm a passionate Full Stack Web Developer with expertise in front-end
-          and back-end technologies. I specialize in creating responsive,
-          user-friendly web applications.
-        </p>
-        <p>
-          With a strong foundation in HTML, CSS, and JavaScript, I'm constantly
-          expanding my skills to stay at the forefront of web development.
-        </p>
-        <p>
-          When I'm not coding, you can find me exploring AI, learning ML, or
-          building side projects.
-        </p>
+        <div id="accordion">
+          <h3>Who I Am</h3>
+          <div>
+            <p>
+              I'm a Full Stack Developer specializing in building web
+              applications.
+            </p>
+          </div>
+          <h3>Skills</h3>
+          <div>
+            <p>
+              Proficient in HTML, CSS, JavaScript, React, Node.js, Express, and
+              MongoDB.
+            </p>
+          </div>
+          <h3>Hobbies</h3>
+          <div>
+            <p>Exploring AI, learning ML, and building cool projects.</p>
+          </div>
+        </div>
       </section>
 
       <!-- Projects Section -->
@@ -210,6 +222,16 @@
                 />
               </div>
               <div class="form-group">
+                <label for="contact-date">Preferred Contact Date</label>
+                <input
+                  type="text"
+                  id="contact-date"
+                  class="form-control"
+                  placeholder="Select a date"
+                />
+              </div>
+
+              <div class="form-group">
                 <label for="message">Message</label>
                 <textarea
                   class="form-control"
@@ -238,5 +260,23 @@
     <!-- Bootstrap & jQuery Scripts -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- jQuery UI JS -->
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+  
+    <!-- accordion activation -->
+    <script>
+      $(function () {
+        $("#accordion").accordion({
+          collapsible: true,
+          heightStyle: "content",
+        });
+      });
+    </script>
+    <!-- Datepicker activation -->
+    <script>
+      $(function () {
+        $("#contact-date").datepicker();
+      });
+    </script>
   </body>
 </html>
